--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AntTrak| Forgot Password</title>
+    <title>Dr.d'Bug | Forgot Password</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
