--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 
         <div class="login-box">
             <div class="login-logo">
-                <a href="../../index2.html"><b>Dr. d'Bug</b></a>
+                @*<a href="../../index2.html"><b>Dr. d'Bug</b></a>*@
             </div>
             <!-- /.login-logo -->
             <div class="card card-danger">
@@ -60,43 +60,29 @@
                     </div>
                     <div class="row">
                         <div class="col-8">
-                            @*<div class="icheck-primary">*@
-                            @*<input type="checkbox" id="remember">
-                <label for="remember">
-                    Remember Me
-                </label>*@
-                            @*@Html.CheckBoxFor(m => m.RememberMe)
-                    @Html.LabelFor(m => m.RememberMe)
-                </div>*@
+
                         </div>
                         <!-- /.col -->
                         <div class="col-4">
-                            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                            <button type="submit" class="btn btn-danger btn-block">Sign In</button>
                         </div>
                         <!-- /.col -->
                     </div>
-                    @*</form>*@
-
-                    @*<div class="social-auth-links text-center mb-3">
-            <p>- OR -</p>
-            <a href="#" class="btn btn-block btn-primary">
-                <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
-            </a>
-            <a href="#" class="btn btn-block btn-danger">
-                <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
-            </a>
-        </div>*@
-                    <!-- /.social-auth-links -->
-
-                    <p class="mb-1">                       
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword", "Account")
-                    </p>
-                    <p class="mb-0">                      
-                        @Html.ActionLink("Register as a new user", "Register", "Account")
-                    </p>
-                    <p class="mb-0">                      
-                        @Html.ActionLink("Sign on as demo user", "DemoLogin", "Account")
-                    </p>
+                    <div class="row">
+                        <div class="col">
+                            @Html.ActionLink("Forgot your password?", "ForgotPassword", "Account")
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            @Html.ActionLink("Register as a new user", "Register", "Account")
+                        </div>                        
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            @Html.ActionLink("Sign on as demo user", "DemoLogin", "Account")
+                        </div>
+                    </div>
                 </div>
                 <!-- /.login-card-body -->
             </div>
