--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -32,6 +32,8 @@
         <div class="login-box">
             <div class="login-logo">
                 @*<a href="../../index2.html"><b>Dr. d'Bug</b></a>*@
+                <i class="fas fa-user-md fa-3x"></i>
+                <h2>Dr. d'Bug</h2>
             </div>
             <!-- /.login-logo -->
             <div class="card card-danger">
