--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -5,7 +5,7 @@
         <div class="row">
             <!-- New Card row -->           
             @*<div class="col-8">*@               
-                <div class="col-8">
+                <div class="col-8 offset-2">
                     <div class="card card-ticket">
                         <div class="card-header">
                             <h4 class="card-title">@ViewBag.CardTitle</h4>
