--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -6,18 +6,14 @@
     <!-- New Card row -->
     <br />
     <br />
-
-    <div class="col-2"></div>@*skinny up the card*@
-    <div class="col-8">
+    <div class="col-8 offset-2">
         @*body col*@
         <div class="card card-project">
             <!-- /.card -->
             <div class="card-header">
                 <h1 class="card-title">Create New Project </h1>
                 <div class="card-tools">
-                    <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fas fa-minus"></i>
-                    </button>
+                   
                 </div>
             </div>
             <div class="card-body">
@@ -27,7 +23,7 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <hr />
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-6">
                             @if (User.IsInRole("Admin"))
                             {
                                 @Html.DropDownList("ProjectManagerId", null,  "Select Project Manager", new {@class = "form-control" })
@@ -57,18 +53,19 @@
                     <br />
                     <div class="row">
                         <br />
-                        <div class="col-8">
+                        <div class="col">
+                            <input type="submit" value="Create" class="form-control btn btn-project" />
                         </div>
-                        <div class="col-4">
-                            <input type="submit" value="Create" class="btn btn-project" />
-                            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
+                        <div class="col">
+                            
+                            @Html.ActionLink("Back to List", "Index", null, new { @class = "form-control btn btn-dark" })
                         </div>
                     </div>
                 }
             </div>  <!-- /.card-body -->
         </div> <!-- /.card -->
     </div>@*body col*@
-    <div class="col-2"></div> @*skinny up the card*@
+   
 </div> <!-- (New Card row) -->
 
 @section Scripts {
