--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using AntTrak.Models
-@model IEnumerable<Project>
+﻿@using AntTrak.ViewModel
+@model IEnumerable<ProjectVM>
 
 
 <div class="row">
@@ -9,9 +9,7 @@
             <div class="card-header">
                 <h3 class="card-title">@ViewBag.CardTitle</h3>
                 <div class="card-tools">
-                    <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fas fa-minus"></i>
-                    </button>                    
+                                       
                 </div>
             </div>
             <div class="card-body">
@@ -20,7 +18,7 @@
                         @if (User.IsInRole("Admin") || User.IsInRole("ProjectManager"))
                         {
                             @Html.ActionLink("Create New Project", "Create", null, null, new { @class = "form-control btn btn-project" })
-                            @*@Html.ActionLink("Create New", "Create")*@
+                        
                         }
                         @Html.AntiForgeryToken()
 
@@ -33,10 +31,10 @@
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.Name)
+                                @Html.DisplayName("Name")
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Description)
+                                @Html.DisplayName("Description")
                             </th>
                             <th>
                                 @Html.DisplayName("Project Manager")
@@ -51,27 +49,21 @@
                         {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
+                                    @Html.DisplayFor(modelItem => item.name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Description)
+                                    @Html.DisplayFor(modelItem => item.description)
                                 </td>
                                 <td>
-                                    @{
-                                        var db = new ApplicationDbContext();
-                                        var pm = db.Users.Find(item.ProjectManagerId);
-                                        var pmName = pm != null ? pm.Fullname : "Unassigned";
-                                    }
-                                    @pmName
-
+                                    @Html.DisplayFor(modelItem => item.pmName)
                                 </td>
                                 <td>
 
-                                    @Html.ActionLink("Details", "Details", new { id = item.Id }) 
+                                    @Html.ActionLink("Details", "Details", new { id = item.id }) 
 
                                     @if (User.IsInRole("Submitter"))
                                     {
-                                        @Html.ActionLink("Create Ticket", "Create", "Tickets", new { projectId = item.Id }, null)
+                                        @Html.ActionLink("Create Ticket", "Create", "Tickets", new { projectId = item.id }, null)
                                     }
                                 </td>
                             </tr>
