--- a/Views/Shared/_SideNav.cshtml
+++ b/Views/Shared/_SideNav.cshtml
@@ -4,9 +4,8 @@
 
 <aside class="main-sidebar sidebar-dark-danger elevation-5">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-        @*<img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">*@
-        <i class="fas fa-user-md"></i>
+    <a href="index3.html" class="brand-link">       
+        <i class="fas fa-user-md fa-2x offset-3"></i>
         <span class="brand-text font-weight-light">Dr. d'Bug</span>
     </a>
 
@@ -45,14 +44,7 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="true">
                 <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
-                @*<li class="nav-item has-treeview menu-open">
-                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link active">
-                        <i class="nav-icon fas fa-hospital-alt"></i>
-                        <p>
-                            Dashboard
-                        </p>
-                    </a>
-                </li>*@
+                
                 <li class="nav-item">
                     <a href="@Url.Action("Dashboard", "Home")" class="nav-link active">
                         <i class="nav-icon fas fa-hospital-alt"></i>
@@ -100,7 +92,7 @@
                 {
                     <li class="nav-item has-treeview menu-open">
                         <a href="@Url.Action("Index", "Projects")" class="nav-link active">
-                            <i class="fas fa-people-carry"></i>
+                            <i class="fas fa-diagnoses"></i>
                             <p>
                                 Projects
                             </p>
@@ -111,7 +103,7 @@
                 {
                     <li class="nav-item has-treeview">
                         <a href="#" class="nav-link active">
-                            <i class="nav-icon fas fa-people-carry"></i>
+                            <i class="nav-icon fas fa-diagnoses"></i>
                             <p>
                                 Projects
                                 <i class="right fas fa-angle-left"></i>
@@ -146,7 +138,7 @@
                     <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
                     <li class="nav-item has-treeview menu-open">
                         <a href="@Url.Action("Create", "Tickets")" class="nav-link active">
-                            <i class="nav-icon fas fa-tag"></i>
+                            <i class="nav-icon fas fa-user-injured"></i>
                             <p>
                                 New Ticket
                             </p>
