Fixed edit/delete TicketComments, user profile, team members

--- a/Content/custom.css
+++ b/Content/custom.css
@@ -27,8 +27,8 @@
 /*priorities*/
 .btn-low {
     color: white;
-    background-color: lemonchiffon;
-    border-color: lemonchiffon;
+    background-color: yellow;
+    border-color: yellow;
 }
     .btn-med {
     color: white;
