--- a/Views/Projects/TeamManagement.cshtml
+++ b/Views/Projects/TeamManagement.cshtml
@@ -9,7 +9,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 offset-2">
                 <div class="card card-project">
                     <div class="card-header">
                         <h3 class="card-title">@ViewBag.CardTitle</h3>
@@ -71,7 +71,7 @@
         </div>
         @*New Card for Table*@
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 offset-2">
                 <div class="card">
                     <div class="card-body">
                         <table class="table table-striped">
