--- a/Views/Shared/_SideNav.cshtml
+++ b/Views/Shared/_SideNav.cshtml
@@ -22,7 +22,7 @@
                         <img src=@Model.AvatarPath class="img-circle elevation-2" alt="">
                     </div>
                     <div class="info">
-                        <a href="@Url.Action("EditUserProfile", "Account")" class="d-block">@Model.Fullname</a>
+                        <a href="@Url.Action("UserProfileEdit", "Admin")" class="d-block">@Model.Fullname</a>
 
 
                     </div>
