--- a/Views/Admin/ManageRoles.cshtml
+++ b/Views/Admin/ManageRoles.cshtml
@@ -8,7 +8,7 @@
                 <div class="row">
                     <!-- New Card row -->
                     <div class="col">
-                        <div class="card card-user">
+                        <div class="card card-warning">
                             <div class="card-header">
                                 <h3 class="card-title">@ViewBag.CardTitle</h3>
                                 <div class="card-tools"></div>
@@ -28,7 +28,7 @@
                                 <div class="row">
                                     <div class="col-6"></div>
                                     <div class="col-3">
-                                        <button type="submit" class="form-control btn-user">Assign User Roles</button>
+                                        <button type="submit" class="form-control btn-warning">Assign User Roles</button>
                                     </div>
                                     <div class="col-3">
                                         @Html.ActionLink("Back to List", "Index", null, new { @class = "form-control btn btn-dark" })
