--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,19 +50,6 @@
                 </li>
 
             </ul>
-
-            <!-- SEARCH FORM -->
-            @*<form class="form-inline ml-3">
-                    <div class="input-group input-group-sm">
-                        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                        <div class="input-group-append">
-                            <button class="btn btn-navbar" type="submit">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>*@
-
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
                 <!-- Messages Dropdown Menu -->
@@ -81,7 +68,7 @@
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                         @foreach (var notification in MessageHelper.GetUnreadNotifications())
                         {
-                            <a href="@Url.Action("Dismiss", "TicketNotifications", new {id = notification.Id})" class="dropdown-item">
+                            <a href="@Url.Action("DismissFromDashboard", "TicketNotifications", new {id = notification.Id})" class="dropdown-item">
                                 <!-- Message Start -->
 
                                 <div class="media">
@@ -103,32 +90,7 @@
                     </div>
                 </li>
                 <!-- Notifications Dropdown Menu -->
-                @*<li class="nav-item dropdown">
-                        <a class="nav-link" data-toggle="dropdown" href="#">
-                            <i class="far fa-bell"></i>
-                            <span class="badge badge-warning navbar-badge">15</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                            <span class="dropdown-item dropdown-header">15 Notifications</span>
-                            <div class="dropdown-divider"></div>
-                            <a href="#" class="dropdown-item">
-                                <i class="fas fa-envelope mr-2"></i> 4 new messages
-                                <span class="float-right text-muted text-sm">3 mins</span>
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="#" class="dropdown-item">
-                                <i class="fas fa-users mr-2"></i> 8 friend requests
-                                <span class="float-right text-muted text-sm">12 hours</span>
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="#" class="dropdown-item">
-                                <i class="fas fa-file mr-2"></i> 3 new reports
-                                <span class="float-right text-muted text-sm">2 days</span>
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
-                        </div>
-                    </li>*@
+                
                 <li class="nav-item">
                     <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
                         <i class="fas fa-th-large"></i>
@@ -173,7 +135,7 @@
         $.widget.bridge('uibutton', $.ui.button)
     </script>
     <!-- Bootstrap 4 -->
-    @*<script src="~/Scripts/bootstrap.bundle.min.js"></script>*@
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
 
     <!-- Sparkline  TLF I don't know what this is so I'm commenting it out for now -->
     @*<script src="plugins/sparklines/sparkline.js"></script>*@
@@ -183,10 +145,10 @@
     <!-- jQuery Knob Chart TLF I don't think I need this so I'm commenting it out for now -->
     @*<script src="plugins/jquery-knob/jquery.knob.min.js"></script>*@
     <!-- daterangepicker TLF I might need this-->
-    @*<script src="~/Scripts/moment.min.js"></script>
-    <script src="~/Scripts/daterangepicker.js"></script>*@
+    @*<script src="~/Scripts/moment.min.js"></script>*@
+    @* <script src="~/Scripts/daterangepicker.js"></script>*@
     <!-- Tempusdominus Bootstrap 4 -->
-    <script src="~/Scripts/tempusdominus-bootstrap-4.min.js"></script>
+    @*<script src="~/Scripts/tempusdominus-bootstrap-4.min.js"></script>*@
     <!-- Summernote -->
     @*<script src="~/Scripts/summernote.js"></script>*@
     <!-- overlayScrollbars -->
@@ -195,7 +157,7 @@
     <script src="~/Scripts/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/dataTables.bootstrap4.min.js"></script>
     <script src="~/Scripts/dataTables.responsive.min.js"></script>
-    <script src="~/Scripts/responsive.bootstrap4.min.js"></script>
+    @*<script src="~/Scripts/responsive.bootstrap4.min.js"></script>*@
     <!-- ChartJS -->
     <script src="~/Scripts/Chart.min.js"></script>
     <!-- AdminLTE App -->
